--- a/battlenet-oauth2/build.gradle
+++ b/battlenet-oauth2/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'fb-like'
+    bintrayName = 'battlenet-oauth2'
 
     publishedGroupId = 'com.bndroid'
     libraryName = 'Battlenet OAuth2'
